--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -14,6 +14,7 @@
     "material-design-icons-iconfont": "^6.1.1",
     "materialize-css": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.3"
   },
   "devDependencies": {
@@ -23,7 +24,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11",
-    "execa": "latest"
+    "execa": "latest",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.4.0",
+    "vue-template-compiler": "^2.6.11"
   }
 }
